Prevent showing horizontal scrollbar in Applications list in Preferences

--- a/src/chrome/browser/preferences/applications.css
+++ b/src/chrome/browser/preferences/applications.css
@@ -12,7 +12,7 @@
   margin-top: 0;
   margin-bottom: 0;
   -moz-margin-start: -2px;
-  -moz-margin-end: 0;
+  -moz-margin-end: 2px;
 }
 
 .typeIcon,
